--- a/first-web-app/first-web-app/src/app/home-page/home-page.component.html
+++ b/first-web-app/first-web-app/src/app/home-page/home-page.component.html
@@ -1,13 +1,98 @@
-<!--The content below is only a placeholder and can be replaced.-->
-<div class="row">
-  <div class="col-lg-12 custom-header">
-   <span>Sri Shainyeshwara swamy temple, Chikkabanavara</span>
-  </div>
+<div class="main-container">
+
+    <header class="header-6">
+        <div class="branding">
+            <a class="nav-link">
+                <clr-icon shape="vm-bug"></clr-icon>
+                <span class="title">Project Clarity</span>
+            </a>
+        </div>
+        <div class="header-actions">
+            <clr-dropdown>
+                <button class="nav-text" clrDropdownTrigger>
+                    john.doe@vmware.com
+                    <clr-icon shape="caret down"></clr-icon>
+                </button>
+                <clr-dropdown-menu *clrIfOpen clrPosition="bottom-right">
+                    <a clrDropdownItem>Preferences</a>
+                    <a clrDropdownItem>Log out</a>
+                </clr-dropdown-menu>
+            </clr-dropdown>
+        </div>
+    </header>
+
+    <nav class="subnav">
+        <ul class="nav">
+            <li class="nav-item">
+                <a class="nav-link active">Dashboard</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link">Management</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link">Cloud</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link">Tenants</a>
+            </li>
+        </ul>
+    </nav>
+
+    <div class="row">
+        <div class="col-lg-2 col-md-1 col-sm-1 col-xs-1">
+            <span>&nbsp;</span>
+        </div>
+        <div class="col-lg-2 col-md-10 col-sm-10 col-xs-10">
+            <div class="card clickable">
+                <div class="card-img">
+                    <img src="../../assets/payments.jpg">
+                </div>
+                <div class="card-block">
+                    <p class="card-text">
+                        This is a banking application.
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div class="col-lg-2 col-md-10 col-sm-10 col-xs-10">
+            <div class="card clickable">
+                <div class="card-img">
+                    <img src="../../assets/mutualfunds.jpg">
+                </div>
+                <div class="card-block">
+                    <p class="card-text">
+                        This is a banking application.
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div class="col-lg-2 col-md-10 col-sm-10 col-xs-10">
+            <div class="card clickable">
+                <div class="card-img">
+                    <img src="../../assets/mutualfunds.jpg">
+                </div>
+                <div class="card-block">
+                    <p class="card-text">
+                        This is a banking application.
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div class="col-lg-2 col-md-10 col-sm-10 col-xs-10">
+                <div class="card clickable">
+                    <div class="card-img">
+                        <img src="../../assets/mutualfunds.jpg">
+                    </div>
+                    <div class="card-block">
+                        <p class="card-text">
+                            This is a banking application.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        <div class="col-lg-2 col-md-1 col-sm-1 col-xs-1">
+            <span>&nbsp;</span>
+        </div>
+    </div>
+
 </div>
-<div class="col-lg-12 custom-section">
-    <ul *ngFor="let item of listObject" class="custom-list">
-      <li>
-        {{ item.element }}
-      </li>
-    </ul>
-  </div>
